fix(Compilation): Fix compilation details
- Decrease version of OpenAPI to 3.0.0
- Remove warnings on OpenAPI generator
- Include some KO integration tests
