# src/main/java/com/susocode/inditextest/price/infrastructure/implementation/input/rest/adapter/RestPriceController.java
@@ -5,7 +5,6 @@ import com.susocode.inditextest.model.PriceResponseDto;
 import com.susocode.inditextest.price.domain.port.input.usecase.FindPriceUseCase;
 import com.susocode.inditextest.price.infrastructure.implementation.input.rest.mapper.RestPriceMapper;
 import java.time.LocalDateTime;
-import java.util.Objects;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -20,12 +19,9 @@ public class RestPriceController implements PricesV1Api {
   private final RestPriceMapper mapper;
 
   @Override
-  public Mono<ResponseEntity<PriceResponseDto>> apiV1PricesProductProductIdBrandBrandIdGet(
+  public Mono<ResponseEntity<PriceResponseDto>> getPriceByProductAndBrand(
       Long productId, Long brandId, LocalDateTime applyDate,
       ServerWebExchange exchange) {
-    if (Objects.isNull(applyDate)) {
-      applyDate = LocalDateTime.now();
-    }
     return findPriceUseCase.findByProductIdAndBrandIdAndDateRange(productId, brandId, applyDate)
         .map(mapper::toResponseDto)
         .map(ResponseEntity::ok);
